--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <script type="text/javascript" src="/js/utils.js"></script>
     <title>{{ title }}</title>
     
   </head>
