--- a/src/css/base.css
+++ b/src/css/base.css
@@ -22,4 +22,16 @@ body {
 .col2-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    align-items: center;
+}
+.grid-item img {
+    width: 100%;
+    height: auto;
 }
